packages/compiler/tests/compile/yaml/errors/incomplete_object.t/run.t
Objet incomplet #1

  $ publicodes compile input.publicodes
  error[E001]: `:` non valide à cet endroit
  [2]

Objet incomplet #2

	$ publicodes compile input2.publicodes
  error[E001]: L'objet n'est pas fermé
  [2]
